--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -1,6 +1,7 @@
   /* Important Code */
   :root {
       --primary-color: #34495e;
+      --primary-light-color: #34495e;
       --secondary-color: #fff;
       --secondary-light-color: #efeeee;
       --third-color: #f39c12;
@@ -69,7 +70,7 @@
       margin: 30px 0px;
   }
 
-  .nav-body a {
+  .nav-body .tab {
       color: var(--secondary-color);
       padding: 10px;
       margin: 5px 0px;
@@ -77,7 +78,7 @@
       transition: 0.2s;
   }
 
-  .nav-body a:focus {
+  .nav-body .tab.active {
       background-color: var(--secondary-color);
       color: var(--primary-color);
   }
@@ -104,8 +105,9 @@
 
   .main-header {
       justify-content: space-between;
-      background-color: var(--secondary-color);
+      background-color: var(--primary-light-color);
       padding: 10px 15px;
+      border: 2px solid var(--secondary-light-color);
   }
 
   .main-header h1 {
@@ -115,17 +117,15 @@
   }
 
   .main-body .create-div {
-      width: 100%;
       padding: 15px 20px;
   }
 
-  .main-body .create-div div {
-      font-size: 18px;
-      background-color: var(--primary-color);
-      width: 180px;
-      padding: 10px;
+  .main-header .dashboard-show {
       color: var(--secondary-color);
+      justify-content: flex-start;
       border-radius: 5px;
+      font-weight: bold;
+      font-size: 25px;
   }
 
   .main-body .card {
@@ -183,6 +183,45 @@
 
   .table-card .btn-view:hover {
       transform: scale(1.2);
+  }
+
+  .filter-div input[type='text'] {
+      border: none;
+      outline: none;
+      padding: 10px 45px 10px 10px;
+      border-radius: 5px;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  }
+
+  .filter-div .select2-selection {
+      height: 43px !important;
+      border: none;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  }
+
+  .filter-div .select2-container--default .select2-selection--single .select2-selection__rendered {
+      line-height: 42px;
+  }
+
+  .filter-div .select2-selection__arrow {
+      position: relative;
+  }
+
+  .filter-div .select2-selection__arrow b {
+      display: none;
+  }
+
+
+  .filter-div .select2-selection__arrow::before {
+      content: '';
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      width: 20px;
+      height: 20px;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%2334495e' fill-rule='evenodd' d='m6 7l6 6l6-6l2 2l-8 8l-8-8z'/%3E%3C/svg%3E");
   }
 
   /* Pagination Styles */
