--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -5,6 +5,7 @@
       --secondary-color: #fff;
       --secondary-light-color: #efeeee;
       --third-color: #f39c12;
+      --fourth-color: #e74c3c;
   }
 
   .flex {
@@ -107,7 +108,7 @@
       justify-content: space-between;
       background-color: var(--primary-light-color);
       padding: 10px 15px;
-      border: 2px solid var(--secondary-light-color);
+      border-left: 5px solid var(--secondary-light-color);
   }
 
   .main-header h1 {
@@ -185,18 +186,18 @@
       transform: scale(1.2);
   }
 
+  /* Filter Div Styles */
   .filter-div input[type='text'] {
       border: none;
       outline: none;
       padding: 10px 45px 10px 10px;
       border-radius: 5px;
-      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      border: 1px solid var(--primary-color);
   }
 
   .filter-div .select2-selection {
       height: 43px !important;
-      border: none;
-      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      border: 1px solid var(--primary-color);
   }
 
   .filter-div .select2-container--default .select2-selection--single .select2-selection__rendered {
@@ -222,6 +223,63 @@
       background-repeat: no-repeat;
       background-size: 100% 100%;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%2334495e' fill-rule='evenodd' d='m6 7l6 6l6-6l2 2l-8 8l-8-8z'/%3E%3C/svg%3E");
+  }
+
+  .filter-div .search-field {
+      position: relative;
+  }
+
+  .filter-div .search-field label {
+      position: absolute;
+      left: 30px;
+      top: 10px;
+      transition: 0.2s;
+      font-size: 15px;
+  }
+
+  .filter-div .search-field input[type='text'] {
+      border: 1px solid var(--primary-color);
+      outline: none;
+      padding: 10px 30px 10px 10px;
+      border-radius: 5px;
+      z-index: 22;
+      box-shadow: none;
+  }
+
+  .filter-div .search-field input[type='text']:focus {
+      border: 2px solid var(--primary-color);
+  }
+
+  .filter-div .search-field input[type='text']:focus+label {
+      left: 30px;
+      top: -12px;
+      padding: 2px 5px;
+      color: var(--primary-color);
+      font-weight: bold;
+      background-color: var(--secondary-color);
+  }
+
+  .filter-div .search-field input[type='text']:valid+label {
+      left: 30px;
+      top: -12px;
+      background-color: var(--secondary-light-color);
+      padding: 2px 5px;
+      background-color: var(--secondary-color);
+  }
+
+
+  .filter-div button {
+      border: 1px solid transparent;
+      outline: none;
+      border-radius: 5px;
+      background-color: var(--fourth-color);
+      color: var(--secondary-color);
+      padding: 10px;
+      transition: 0.2s;
+  }
+
+  .filter-div button:hover {
+      background-color: #c0392b;
   }
 
   /* Pagination Styles */
