--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -180,13 +180,22 @@
   }
 
   /* Filter Div Styles */
-  .filter-div input[type='text'] {
+  .filter-div input[type='date'] {
       border: none;
       outline: none;
-      padding: 10px 45px 10px 10px;
+      padding: 10px;
       border-radius: 5px;
       border: 1px solid var(--primary-color);
   }
+
+  .filter-div input[type="date"]::-webkit-calendar-picker-indicator {
+      background: none;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%2334495e' d='M8 14q-.425 0-.712-.288T7 13t.288-.712T8 12t.713.288T9 13t-.288.713T8 14m4 0q-.425 0-.712-.288T11 13t.288-.712T12 12t.713.288T13 13t-.288.713T12 14m4 0q-.425 0-.712-.288T15 13t.288-.712T16 12t.713.288T17 13t-.288.713T16 14M5 22q-.825 0-1.412-.587T3 20V6q0-.825.588-1.412T5 4h1V2h2v2h8V2h2v2h1q.825 0 1.413.588T21 6v14q0 .825-.587 1.413T19 22zm0-2h14V10H5z'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+  }
+
 
   .filter-div .select2-selection {
       height: 43px !important;
@@ -204,7 +213,6 @@
   .filter-div .select2-selection__arrow b {
       display: none;
   }
-
 
   .filter-div .select2-selection__arrow::before {
       content: '';
@@ -281,6 +289,16 @@
       width: 100%;
   }
 
+  .edit-invoice-btn {
+      border: none;
+      outline: none;
+      background-color: var(--third-color);
+      padding: 10px;
+      border-radius: 5px;
+      color: var(--secondary-color);
+      width: 100%;
+  }
+
   .save-invoice-btn {
       border: none;
       outline: none;
@@ -300,8 +318,13 @@
       background-color: #8e44ad;
   }
 
+  .edit-invoice-btn:hover {
+      background-color: #df8c06;
+  }
+
   /* Modal Styles */
-  #addInvoice-Modal input {
+  #addInvoice-Modal input,
+  #editInvoice-Modal input {
       width: 100%;
       border: none;
       outline: none;
@@ -313,6 +336,26 @@
 
   #addInvoice-Modal input:focus {
       border-bottom: 3px solid var(--fourth-color);
+  }
+
+  #editInvoice-Modal input:focus {
+      border-bottom: 3px solid var(--third-color);
+  }
+
+  .btns-close {
+      border: none;
+      outline: none;
+      width: 30px;
+      height: 30px;
+      background-color: var(--fourth-color);
+      color: white;
+      font-size: 20px;
+      cursor: pointer;
+      border-radius: 50%;
+  }
+
+  .btns-close:hover {
+      background-color: #c0392b;
   }
 
   /* Loader Styles */
@@ -341,7 +384,7 @@
       padding: 0px 0px;
   }
 
-  .pagination>button {
+  .pagination button {
       width: 30px;
       height: 30px;
       border: none;
@@ -355,7 +398,7 @@
       background-color: #dfdfda !important;
   }
 
-  .active-page {
+  .power {
       background-color: var(--primary-color) !important;
       color: var(--secondary-color);
   }
