date picker style changes done

--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -204,6 +204,7 @@ ul li {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    cursor: pointer;
 }
 
 
