--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -2,6 +2,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+    font-family: myFirstFont;
+    src: url('/resources/fonts/impact.ttf');
+}
+
+@font-face {
+    font-family: mySecondFont;
+    src: url('/resources/fonts/Calibri\ Regular.ttf');
+}
+
+
 /* Important Code */
 * {
     font-family: "Poppins", sans-serif;
@@ -485,7 +496,7 @@ ul li {
 
 .gr-box {
     border: 1px solid black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: mySecondFont;
 }
 
 .gr-box-1 {
@@ -497,7 +508,7 @@ ul li {
 }
 
 .gr-box-1 .heading h6 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: myFirstFont;
     font-size: 50px;
     color: var(--theme-color);
 }
@@ -620,7 +631,7 @@ ul li {
 }
 
 .gr-box-8 .left .div-1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: myFirstFont;
     color: var(--theme-color);
 }
 
@@ -638,17 +649,17 @@ ul li {
 
 .gr-box-9 {
     background-color: #eeece1;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--theme-imp-color);
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .gr-box-10 {
     flex-direction: column;
     background-color: #eeece1;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--theme-imp-color);
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .gr-box-10 .top {
@@ -662,33 +673,34 @@ ul li {
 
 .gr-box-11 {
     background-color: #eeece1;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--theme-imp-color);
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .gr-box-12 {
     background-color: #eeece1;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--theme-imp-color);
-    font-weight: bold;
     text-align: center;
+    font-weight: bolder;
 }
 
 .gr-box-13 {
     background-color: #eeece1;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--theme-imp-color);
-    font-weight: bold;
     text-align: center;
+    font-weight: bolder;
 }
 
 .gr-box-14 {
     background-color: #eeece1;
-    font-size: 14px;
+    font-size: 16px;
     color: var(--theme-imp-color);
-    font-weight: bold;
+    font-weight: bolder;
 }
+
 
 .gr-box-15 input {
     border: 1px solid lightgray;
@@ -816,7 +828,7 @@ ul li {
 }
 
 .gr-box-24 .top p {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: myFirstFont;
     font-size: 25px;
     color: var(--theme-color);
 }
