--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -1,17 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@font-face {
-    font-family: myFirstFont;
-    src: url('/resources/fonts/impact.ttf');
-}
-
-@font-face {
-    font-family: mySecondFont;
-    src: url('/resources/fonts/Calibri\ Regular.ttf');
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 /* Important Code */
 * {
@@ -508,7 +498,7 @@ ul li {
 }
 
 .gr-box-1 .heading h6 {
-    font-family: myFirstFont;
+    font-family: "Anton", sans-serif;
     font-size: 50px;
     color: var(--theme-color);
 }
@@ -631,7 +621,7 @@ ul li {
 }
 
 .gr-box-8 .left .div-1 {
-    font-family: myFirstFont;
+    font-family: "Anton", sans-serif;
     color: var(--theme-color);
 }
 
@@ -828,7 +818,7 @@ ul li {
 }
 
 .gr-box-24 .top p {
-    font-family: myFirstFont;
+    font-family: "Anton", sans-serif;
     font-size: 25px;
     color: var(--theme-color);
 }
